<resources>
    <!-- General -->
    <string name="backIcon" translatable="false">\uF104</string>
    <string name="UID" translatable="false">watizit-7bcd-11ea-bc55</string>
    <!-- Main menu -->
    <string name="mainMenu_playButton">"\uF04B  Play"</string>
    <string name="mainMenu_optionsButton">"\uF013  Options"</string>
    <!-- Options menu -->
    <string name="optionsMenu_title">Options</string>
    <string name="optionsMenu_language">Language</string>
    <string name="optionsMenu_copyright">
        Copyright © 2020\nLAURET Nicolas, RANDRIANASOLO Rooly\n\n
        Images by <a href="https://www.flaticon.com/">Flaticon</a> •
        Music by <a href="https://opengameart.org/users/horrorpen">HorrorPen</a>
    </string>
    <string name="optionsMenu_copyrightAlt">
        Copyright © 2020 LAURET Nicolas, RANDRIANASOLO Rooly\n\n
        Images by <a href="https://www.flaticon.com/">Flaticon</a> •
        Music by <a href="https://opengameart.org/users/horrorpen">HorrorPen</a>
    </string>
    <string name="volume">Volume</string>
    <!-- Levels list menu -->
    <string name="levelsListMenu_title">LEVELS</string>
    <!-- Level menu -->
    <string name="levelMenu_title">Level %d</string>
    <string name="levelMenu_hintIcon" translatable="false">\uf0eb</string>
    <!-- Hints popup -->
    <string name="hintsPopup_title">Need help ?</string>
    <string name="hintsPopup_account" translatable="false">%d\uf0e7</string>
    <string name="hintsPopup_hint1">See a letter\n{Cost: 3\uf0e7}</string>
    <string name="hintsPopup_hint2">Brighten the picture\n{Cost: 5\uf0e7}</string>
    <string name="hintsPopup_hint3">Skip the level\n{Cost: 7\uf0e7}</string>
    <string name="hintsPopup_close">Close</string>
    <!-- Win popup -->
    <string name="winPopup_title">LEVEL COMPLETE !</string>
    <string name="winPopup_moneyWon" translatable="false">+%d\uf0e7</string>
    <string name="winPopup_backToMenu">Back to menu</string>
    <string name="winPopup_nextLevel">Next level</string>
    <!-- Levels words -->
    <string name="word_diamond">DIAMOND</string>
    <string name="word_fire">FIRE</string>
    <string name="word_cat">CAT</string>
    <string name="word_butterfly">BUTTERFLY</string>
    <string name="word_car">CAR</string>
    <string name="word_lizard">LIZARD</string>
    <string name="word_plane">PLANE</string>
    <string name="word_dog">DOG</string>
    <string name="word_dinosaur">DINOSAUR</string>
    <string name="word_flower">FLOWER</string>
    <string name="word_cap">CAP</string>
    <string name="word_lamp">LAMP</string>
    <string name="word_house">HOUSE</string>
    <string name="word_croissant">CROISSANT</string>
    <string name="word_bottle">BOTTLE</string>
    <string name="word_umbrella">UMBRELLA</string>
    <string name="word_church">CHURCH</string>
    <string name="word_whisk">WHISK</string>
    <string name="word_necklace">NECKLACE</string>
    <string name="word_eggs">EGGS</string>
    <string name="word_falcon">FALCON</string>
    <string name="word_tornado">TORNADO</string>
    <string name="word_trap">TRAP</string>
    <string name="word_chick">CHICK</string>
    <string name="word_volcano">VOLCANO</string>
    <string name="word_comb">COMB</string>
    <string name="word_octopus">OCTOPUS</string>
    <string name="word_saddle">SADDLE</string>
    <string name="word_books">BOOKS</string>
    <string name="word_cake">CAKE</string>
    <string name="word_meat">MEAT</string>
    <string name="word_popcorn">POPCORN</string>
    <!-- Screen-readers -->
    <string name="sr_appName" translatable="false">Watizit</string>
    <string name="sr_flagFrench">French flag</string>
    <string name="sr_flagEnglish">English flag</string>
    <string name="sr_flagSpanish">Spanish flag</string>
    <string name="sr_levelImage">Level</string>
    <string name="sr_starImage">Star</string>
    <string name="sr_lockedImage">Locked</string>
    <string name="sr_playText">Play</string>
    <string name="sr_optionsText">Options</string>
    <string name="sr_backText">Back</string>
    <string name="sr_hintsText">Hints</string>
</resources>
